--- a/ldaw_ad20_example/public/css/main.css
+++ b/ldaw_ad20_example/public/css/main.css
@@ -75,7 +75,7 @@ nav li a{
     height: 100%;
     width: 100%;
     border-bottom: 5px solid #255C69;
-    padding: 10px 15px 5px 15px;
+    padding: 15px 25px;
     color: #FFFFFF;
 }
 
@@ -91,4 +91,36 @@ nav li a:hover{
 
 main h2{
     text-align: center;
+    margin-bottom: 20px;
 }
+
+
+/************************
+        CATÁLOGO
+*************************/
+
+.catalog{
+    padding: 25px;
+}
+
+.catalog .book-item .card{
+    color: #000000;
+    text-align: center;
+    border-radius: 25px !important;
+}
+
+.catalog .book-item img{
+    width: 200px;
+    height: 300px;
+    margin: 20px auto 0px auto;
+}
+
+.catalog .book-item .card .btn{
+    background-color: #0f434F;
+    color: #FFFFFF;
+}
+
+
+/************************
+    TERMINA CATÁLOGO
+*************************/
