Blade 2: estructuras de control, impresión de datos de variables y creación de componentes.

--- a/ldaw_ad20_example/public/css/main.css
+++ b/ldaw_ad20_example/public/css/main.css
@@ -79,7 +79,8 @@ nav li a{
     color: #FFFFFF;
 }
 
-nav li a:hover{
+nav li a:hover,
+nav li a.active{
     background-color: #255C69;
     color: #FFFFFF;
     text-decoration: none;
